samples/_failures_safe/1761198733_632aea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f4d1990.c:166: error: expected ‘;’, ‘,’ or ‘)’ at end of input
